--- a/haptic-react/package.json
+++ b/haptic-react/package.json
@@ -1,19 +1,21 @@
 {
-  "name": "advice-app",
+  "name": "IanRubensteinBio",
   "version": "0.1.0",
   "private": true,
-  "homepage": "http://AnjaliSharma1234.github.io/Personal-Advisor-React-App",
+  "homepage": "http://hapticPaper.github.io/react",
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^1.2.28",
     "@fortawesome/free-brands-svg-icons": "^5.13.0",
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "@fortawesome/react-fontawesome": "^0.1.9",
     "@material-ui/core": "^4.11.0",
+    "@material-ui/icons": "^4.9.1",
     "@testing-library/jest-dom": "^4.2.4",
     "@testing-library/react": "^9.5.0",
     "@testing-library/user-event": "^7.2.1",
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
+    "react-redux": "^7.2.2",
     "react-scripts": "3.4.1",
     "redux": "^4.0.5"
   },
