--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
   "dependencies": {
     "@mdx-js/react": "^3.1.1",
     "clsx": "^2.1.1",
+    "d3": "^7.9.0",
+    "lodash": "^4.17.23",
     "react": "^19.1.1",
     "react-dom": "^19.1.1",
     "react-router-dom": "^7.1.5"
