--- a/tsconfig.json
+++ b/tsconfig.json
@@ -5,6 +5,7 @@
     "module": "ESNext",
     "moduleResolution": "Bundler",
     "jsx": "react-jsx",
+    "allowJs": true,
     "strict": true,
     "skipLibCheck": true,
     "noEmit": true,
@@ -14,5 +15,5 @@
       "@/*": ["src/*"]
     }
   },
-  "include": ["src", "vite.config.ts"]
+  "include": ["src/**/*.ts", "src/**/*.tsx", "src/content/**/*.jsx", "src/**/*.d.ts", "vite.config.ts"]
 }
